--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -25,7 +25,7 @@
                     <p th:text="'Cena: ' + ${game.price} + 'zł'" class="game-price"></p>
                     <div th:text="'Ilość sztuk: ' + ${game.pieces}" class="game-pieces"></div>
                     <div th:text="'Kod produktu: ' + ${game.code}" class="game-code"></div>
-                    <div><a href="/editGame ">edytuj</a></div>
+                    <div><a th:href="@{/editGame/{code}(code=${game.code})}">edytuj</a></div>
                 </div>
             </div>
         </th:block>
