--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -30,6 +30,9 @@
     </div>
   </th:block>
   <div th:text="${'TOTAL: ' + sum} + 'zł'" class="total"></div>
+
+  <a href="/order">Potwierdź zamówienie </a>
+
 </div>
 </body>
 </html>
